<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="#373737"
    android:layout_marginTop="1dp"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abril_fatface"
        android:padding="5dp"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textIsSelectable="false"
        android:textSize="35sp"
        android:textStyle="bold|italic" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:background="@drawable/round_button_background">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/regular_base"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:padding="5dp"/>
                <Button
                    android:id="@+id/dec_to_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dec_to_other"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/round_button"
                    android:paddingRight="20dp"
                    android:paddingLeft="20dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textSize="20sp"
                    android:textColor="#FFFFFF"
                    android:textAllCaps="true"
                    android:textStyle="bold" />
                <Button
                    android:id="@+id/bin_to_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bin_to_other"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/round_button"
                    android:paddingRight="20dp"
                    android:paddingLeft="20dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textSize="20sp"
                    android:textColor="#FFFFFF"
                    android:textAllCaps="true"
                    android:textStyle="bold" />
                <Button
                    android:id="@+id/oct_to_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/oct_to_other"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/round_button"
                    android:paddingRight="20dp"
                    android:paddingLeft="20dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textSize="20sp"
                    android:textColor="#FFFFFF"
                    android:textAllCaps="true"
                    android:textStyle="bold" />
                <Button
                    android:id="@+id/hex_to_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hex_to_other"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/round_button"
                    android:paddingRight="20dp"
                    android:paddingLeft="20dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textSize="20sp"
                    android:textColor="#FFFFFF"
                    android:textAllCaps="true"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:background="@drawable/round_button_background">

                <TextView
                    android:text="@string/advanced_base"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:padding="5dp"/>
                <Button
                    android:id="@+id/any_to_any"
                    android:text="@string/any_to_any"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/round_button"
                    android:paddingRight="20dp"
                    android:paddingLeft="20dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textSize="20sp"
                    android:textColor="#FFFFFF"
                    android:textAllCaps="true"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:background="@drawable/round_button_background">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/code_converter"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:padding="5dp"
                    />
                <Button
                    android:id="@+id/bin_to_gray"
                    android:text="@string/bin_to_gray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/round_button"
                    android:paddingRight="20dp"
                    android:paddingLeft="20dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textSize="20sp"
                    android:textColor="#FFFFFF"
                    android:textAllCaps="true"
                    android:textStyle="bold"/>
                <Button
                    android:id="@+id/gray_to_bin"
                    android:text="@string/gray_to_bin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/round_button"
                    android:paddingRight="20dp"
                    android:paddingLeft="20dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textSize="20sp"
                    android:textColor="#FFFFFF"
                    android:textAllCaps="true"
                    android:textStyle="bold"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="#FFFFFF"
                android:layout_marginBottom="30dp"
                android:text="@string/copyright"
                />

        </LinearLayout>
    </ScrollView>


</LinearLayout>