<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="#373737"
    android:layout_margin="1dp"
    android:layout_height="match_parent"
    tools:context=".DecToOther">

    <TextView
        android:id="@+id/textView_dec_to_other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abril_fatface"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:text="@string/dec_to_other"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:background="@drawable/round_button_background">

                <TextView
                    android:id="@+id/textView_dec"
                    android:text="@string/dec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="15dp"
                    android:textAllCaps="true"
                    android:textColor="#000000"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editText_dec"
                    android:backgroundTint="#000000"
                    android:hint="@string/dec_input_hint"
                    android:gravity="center_horizontal"
                    android:inputType="numberDecimal"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:textCursorDrawable="@null"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:autofillHints="no" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button_convert"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/button_2"
                        android:text="@string/convert_button"
                        android:textAllCaps="false"
                        android:textColor="#0D0555"
                        android:textSize="25sp"
                        android:padding="10dp"
                        android:textStyle="bold"
                        android:layout_marginEnd="20dp"
                        tools:ignore="ButtonStyle" />
                    <Button
                        android:id="@+id/button_reset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/button_2"
                        android:text="@string/reset_button"
                        android:padding="10dp"
                        android:textAllCaps="false"
                        android:textColor="#0D0555"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        tools:ignore="ButtonStyle" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:background="@drawable/round_button_background">
                <TextView
                    android:id="@+id/textView_bin"
                    android:text="@string/bin"
                    android:textAllCaps="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:padding="5dp"
                    />
                <TextView
                    android:id="@+id/textView_bin_output"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textIsSelectable="true"
                    android:layout_marginBottom="10dp"
                    android:textColor="#000000"
                    android:textAllCaps="true"
                    android:text="@string/dot_line"
                    android:textSize="25sp"
                    android:padding="5dp"
                    />
                <TextView
                    android:id="@+id/textView_oct"
                    android:text="@string/oct"
                    android:textAllCaps="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:padding="5dp" />
                <TextView
                    android:id="@+id/textView_oct_output"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textIsSelectable="true"
                    android:layout_marginBottom="10dp"
                    android:textColor="#000000"
                    android:textAllCaps="true"
                    android:text="@string/dot_line"
                    android:textSize="25sp"
                    android:padding="5dp"/>
                <TextView
                    android:id="@+id/textView_hex"
                    android:text="@string/hex"
                    android:textAllCaps="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:padding="5dp"
                    />
                <TextView
                    android:id="@+id/textView_hex_output"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textIsSelectable="true"
                    android:layout_marginBottom="10dp"
                    android:textColor="#000000"
                    android:textAllCaps="true"
                    android:text="@string/dot_line"
                    android:textSize="25sp"
                    android:padding="5dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>